# TaskManager

./: README.md  pyproject.toml  requirements.txt
task_manager/: db.sqlite3  pytest.ini
task_manager/core/: constants.py  models.py
task_manager/task_manager/: settings.py  urls.py
task_manager/tasks/: admin.py  forms.py  mixins.py  models.py  urls.py  utils.py  validators.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/templatetags/: _filter.py  sidebar_querysets.py
task_manager/templates/base/: footer.html  index.html  javascripts.html  sidebar.html
task_manager/templates/static/js/: jquery.formset.js
task_manager/templates/tasks/: create_task.html  detail.html  subtasks.html  tasks_list.html  update.html
task_manager/tests/: conftest.py  smoke_test.py  test_tasks.py  url_schemas.py
